@@ -17,23 +17,26 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.ZoneId;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.BiFunction;
 import java.util.stream.IntStream;
 import lombok.Setter;
 import lombok.val;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.test.util.ReflectionTestUtils;
 import uk.gov.hmcts.appregister.audit.event.BaseAuditEvent;
 import uk.gov.hmcts.appregister.audit.event.CompleteEvent;
 import uk.gov.hmcts.appregister.audit.listener.AuditOperationLifecycleListener;
@@ -84,11 +87,6 @@ class StandardApplicantServiceTest {
 
     @InjectMocks private StandardApplicationServiceImpl standardApplicantService;
 
-    @BeforeEach
-    void before() {
-        standardApplicantMapper.setApplicantMapper(new ApplicantMapperImpl());
-    }
-
     @Test
     void testGetAll() {
         when(clock.instant()).thenReturn(FIXED_INSTANT);
@@ -118,10 +116,8 @@ class StandardApplicantServiceTest {
         val pageable = PageRequest.of(0, 2);
 
         when(projection1.getStandardApplicant()).thenReturn(standardApplicant1);
-        when(projection1.getEffectiveName()).thenReturn("John Doe");
 
         when(projection2.getStandardApplicant()).thenReturn(standardApplicant2);
-        when(projection2.getEffectiveName()).thenReturn("Jane Doe");
 
         val pageImpl = new PageImpl<>(java.util.List.of(projection1, projection2), pageable, 2);
 
@@ -153,9 +149,7 @@ class StandardApplicantServiceTest {
 
         Assertions.assertEquals(2, standardApplicantPage.getTotalElements());
         Assertions.assertEquals(standardApplicant1.getApplicantCode(), firstResult.getCode());
-        Assertions.assertEquals(
-                standardApplicant1.getName(),
-                firstResult.getApplicant().getOrganisation().getName());
+        Assertions.assertEquals(standardApplicant1.getName(), firstResult.getName());
         Assertions.assertEquals(
                 standardApplicant1.getApplicantStartDate(), firstResult.getStartDate());
         Assertions.assertEquals(
@@ -163,9 +157,7 @@ class StandardApplicantServiceTest {
 
         val secondResult = standardApplicantPage.getContent().get(1);
         Assertions.assertEquals(standardApplicant2.getApplicantCode(), secondResult.getCode());
-        Assertions.assertEquals(
-                standardApplicant2.getName(),
-                secondResult.getApplicant().getOrganisation().getName());
+        Assertions.assertEquals(standardApplicant2.getName(), secondResult.getName());
         Assertions.assertEquals(
                 standardApplicant2.getApplicantStartDate(), secondResult.getStartDate());
         Assertions.assertEquals(
@@ -270,7 +262,6 @@ class StandardApplicantServiceTest {
         val pageable = PageRequest.of(0, 2);
         val projection = mock(StandardApplicantEnrichedProjection.class);
         when(projection.getStandardApplicant()).thenReturn(applicant);
-        when(projection.getEffectiveName()).thenReturn(name);
         when(repository.search(
                         eq(code),
                         eq(name),
@@ -327,7 +318,6 @@ class StandardApplicantServiceTest {
         val pageable = PageRequest.of(0, 2);
         val projection = mock(StandardApplicantEnrichedProjection.class);
         when(projection.getStandardApplicant()).thenReturn(applicant);
-        when(projection.getEffectiveName()).thenReturn(name);
         when(repository.search(
                         eq(code),
                         eq(name),
@@ -412,7 +402,6 @@ class StandardApplicantServiceTest {
 
         Assertions.assertEquals(0, result.getRecordCount());
         Assertions.assertTrue(result.getApplicants().isEmpty());
-        Assertions.assertEquals(addressLine1, result.getSearchCriteria().getAddressLine1().get());
         Assertions.assertEquals(from, result.getSearchCriteria().getFrom().get());
         Assertions.assertEquals(to, result.getSearchCriteria().getTo().get());
     }
@@ -511,9 +500,8 @@ class StandardApplicantServiceTest {
         sa.setApplicantSurname("Smith");
         sa.setApplicantForename1("John");
 
-        when(repository.findByCodeAndName(eq(sa.getApplicantCode()), any()))
-                .thenReturn(List.of(sa));
-        String csv = standardApplicantService.generateCsv(sa.getApplicantCode(), null);
+        stubCsvSearch(sa);
+        String csv = standardApplicantService.generateCsv(sa.getApplicantCode(), null, csvPaging());
         Assertions.assertNotNull(csv);
         Assertions.assertEquals(
                 StandardApplicantCsvRow.Header, List.of(csv.split("\n")[0].split("\\|")));
@@ -542,8 +530,8 @@ class StandardApplicantServiceTest {
         sa.setTelephoneNumber("0123456789");
         sa.setMobileNumber("0987654321");
 
-        when(repository.findByCodeAndName(any(), eq(sa.getName()))).thenReturn(List.of(sa));
-        String csv = standardApplicantService.generateCsv(null, sa.getName());
+        stubCsvSearch(sa);
+        String csv = standardApplicantService.generateCsv(null, sa.getName(), csvPaging());
         Assertions.assertNotNull(csv);
         Assertions.assertEquals(
                 StandardApplicantCsvRow.Header, List.of(csv.split("\n")[0].split("\\|")));
@@ -553,36 +541,42 @@ class StandardApplicantServiceTest {
         }
     }
 
-    @Test
-    void testExportToCsv_codeAndNameFilterFailure() {
-        val exception =
-                Assertions.assertThrows(
-                        AppRegistryException.class,
-                        () -> standardApplicantService.generateCsv("APP001", "Test Org"));
-        Assertions.assertEquals(
-                StandardApplicantCodeError.CODE_AND_NAME_EXCLUSION_VIOLATION, exception.getCode());
+    @ParameterizedTest
+    @CsvSource({"APP001,", ",Test Org", "APP001,Test Org", ",", "'',''"})
+    void export_acceptsSearchFilterCombinationsAndUsesActiveDateAndSort(String code, String name) {
+        val sa =
+                projection("APP001", "Test Org", CURRENT_UK_DATE.minusDays(1), null)
+                        .getStandardApplicant();
+        stubCsvSearch(sa);
+
+        val csv = standardApplicantService.generateCsv(code, name, csvPaging());
+
+        Assertions.assertEquals("APP001", parseCsv(csv).get(1).getApplicantCode());
+        verify(repository)
+                .search(
+                        code == null || code.isBlank() ? null : code,
+                        name == null || name.isBlank() ? null : name,
+                        null,
+                        null,
+                        null,
+                        CURRENT_UK_DATE,
+                        Pageable.unpaged(
+                                Sort.by(Sort.Direction.DESC, "effectiveName")
+                                        .and(Sort.by(StandardApplicant_.ID))));
     }
 
     @Test
     void testExportToCsv_noResultsFoundFailure() {
-        when(repository.findByCodeAndName(any(), any())).thenReturn(Collections.emptyList());
+        when(clock.withZone(ukZone)).thenReturn(FIXED_CLOCK);
+        when(repository.search(any(), any(), any(), any(), any(), any(), any()))
+                .thenReturn(new PageImpl<>(List.of()));
         val exception =
                 Assertions.assertThrows(
                         AppRegistryException.class,
-                        () -> standardApplicantService.generateCsv("APP001", null));
+                        () -> standardApplicantService.generateCsv("APP001", null, csvPaging()));
         Assertions.assertEquals(
                 StandardApplicantCodeError.NO_RESULTS_FOUND_FOR_CSV_GENERATION,
                 exception.getCode());
-    }
-
-    @Test
-    void testExportToCsv_codeAndNameBlankFailure() {
-        val exception =
-                Assertions.assertThrows(
-                        AppRegistryException.class,
-                        () -> standardApplicantService.generateCsv("", ""));
-        Assertions.assertEquals(
-                StandardApplicantCodeError.CODE_AND_NAME_EXCLUSION_VIOLATION, exception.getCode());
     }
 
     @Test
@@ -607,14 +601,21 @@ class StandardApplicantServiceTest {
         sa.setApplicantSurname("Smith");
         sa.setApplicantForename1("John");
 
-        when(repository.findByCodeAndName(eq(sa.getApplicantCode()), any()))
-                .thenReturn(List.of(sa));
-        String csv = standardApplicantService.generateCsv(sa.getApplicantCode(), "");
+        stubCsvSearch(sa);
+        String csv = standardApplicantService.generateCsv(sa.getApplicantCode(), "", csvPaging());
         Assertions.assertNotNull(csv);
         Assertions.assertEquals(
                 StandardApplicantCsvRow.Header, List.of(csv.split("\n")[0].split("\\|")));
 
-        verify(repository).findByCodeAndName(sa.getApplicantCode(), null);
+        verify(repository)
+                .search(
+                        eq(sa.getApplicantCode()),
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        eq(CURRENT_UK_DATE),
+                        any());
         List<StandardApplicantCsvRow> rows = parseCsv(csv);
         for (int i = 1; i < rows.size(); i++) {
             dataComparison(rows.get(i), sa);
@@ -643,9 +644,8 @@ class StandardApplicantServiceTest {
         sa.setApplicantSurname("Smith");
         sa.setApplicantForename1("John");
 
-        when(repository.findByCodeAndName(eq(sa.getApplicantCode()), any()))
-                .thenReturn(List.of(sa));
-        String csv = standardApplicantService.generateCsv(sa.getApplicantCode(), null);
+        stubCsvSearch(sa);
+        String csv = standardApplicantService.generateCsv(sa.getApplicantCode(), null, csvPaging());
 
         Assertions.assertTrue(
                 csv.contains("'=1+1"),
@@ -655,6 +655,82 @@ class StandardApplicantServiceTest {
                 "CSV should escape formula values to prevent execution when imported into Excel");
         Assertions.assertEquals("=1+1", sa.getApplicantCode());
         Assertions.assertEquals("@Test Org", sa.getName());
+    }
+
+    private void stubCsvSearch(StandardApplicant applicant) {
+        when(clock.withZone(ukZone)).thenReturn(FIXED_CLOCK);
+        val projection = mock(StandardApplicantEnrichedProjection.class);
+        when(projection.getStandardApplicant()).thenReturn(applicant);
+        when(repository.search(any(), any(), any(), any(), any(), any(), any()))
+                .thenReturn(new PageImpl<>(List.of(projection)));
+    }
+
+    private PagingWrapper csvPaging() {
+        return PagingWrapper.of(
+                List.of(), PageRequest.of(3, 1, Sort.by(Sort.Direction.DESC, "effectiveName")));
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {1, 2, 3})
+    void print_enforcesConfiguredLimitWithoutTruncation(int count) {
+        ReflectionTestUtils.setField(standardApplicantService, "maxPrintRows", 2);
+        when(clock.withZone(ukZone)).thenReturn(FIXED_CLOCK);
+        val rows =
+                IntStream.range(0, count)
+                        .mapToObj(i -> projection("APP" + i, "Org", CURRENT_UK_DATE, null))
+                        .toList();
+        when(repository.search(any(), any(), any(), any(), any(), any(), any()))
+                .thenReturn(new PageImpl<>(rows));
+        if (count > 2) {
+            assertThatThrownBy(
+                            () ->
+                                    standardApplicantService.print(
+                                            null, null, null, null, null, csvPaging()))
+                    .isInstanceOf(AppRegistryException.class)
+                    .hasMessageContaining("exceeds 2 rows");
+        } else {
+            Assertions.assertEquals(
+                    count,
+                    standardApplicantService
+                            .print(null, null, null, null, null, csvPaging())
+                            .getRecordCount());
+        }
+    }
+
+    @Test
+    void print_fetchesAllPagesWhenConfiguredLimitExceedsBatchSize() {
+        ReflectionTestUtils.setField(standardApplicantService, "maxPrintRows", 1001);
+        when(clock.withZone(ukZone)).thenReturn(FIXED_CLOCK);
+        val sort =
+                Sort.by(Sort.Direction.DESC, "effectiveName").and(Sort.by(StandardApplicant_.ID));
+        val first = PageRequest.of(0, 1000, sort);
+        val second = first.next();
+        val rows =
+                IntStream.range(0, 1001)
+                        .mapToObj(i -> projection("APP" + i, "Org", CURRENT_UK_DATE, null))
+                        .toList();
+        when(repository.search(
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        eq(CURRENT_UK_DATE),
+                        eq(first)))
+                .thenReturn(new PageImpl<>(rows.subList(0, 1000), first, 1001));
+        when(repository.search(
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        eq(CURRENT_UK_DATE),
+                        eq(second)))
+                .thenReturn(new PageImpl<>(rows.subList(1000, 1001), second, 1001));
+
+        val result = standardApplicantService.print(null, null, null, null, null, csvPaging());
+        Assertions.assertEquals(1001, result.getRecordCount());
+        Assertions.assertEquals("APP1000", result.getApplicants().getLast().getCode().get());
     }
 
     private void dataComparison(StandardApplicantCsvRow row, StandardApplicant expected) {
